CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.49 2002/11/16 18:30:23 ballen4705 Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/


NOTES FOR FUTURE RELEASES: see TODO file.

CURRENT RELEASE (see VERSION file in this directory):
  Fixed bug in smartd where testunitready logic inverted
  prevented functioning on scsi devices.

  Brabec: added Czech descriptions to .spec file
  Brabec: corrected comment in smartd.conf example

  Changed way that entries in the ATA error log are printed,
  to make it clearer which is the most recent error and
  which is the oldest one.

smartmontools-5.0.43

  Changed Temperature_Centigrade to Temperature_Celsius.
  The term "Centigrade" ceased to exist in 1948.  (c.f
  http://www.bartleby.com/64/C004/016.html).

smartmontools-5.0.42

  Modified SCSI device check to also send warning emails if
  requested in directives file.

  Added a new smartd configuration file Directive: -M ADDRESS.
  This sends a single warning email to ADDRESS for failures or
  errors detected with the -c, -L, -l, or -f Directives.

smartmontools-5.0.38

  Modified perror() statements in atacmds.c so that printout for SMART
  commands errors is properly suppressed or queued depending upon users