@@ -30,7 +30,7 @@ Packager:       Bruce Allen <smartmontools-support@lists.sourceforge.net>
 # http://ftp1.sourceforge.net/smartmontools/smartmontools-%{version}-%{release}.tar.gz
 
 # CVS ID of this file is:
-# $Id: smartmontools.spec,v 1.68 2002/11/17 05:30:11 ballen4705 Exp $
+# $Id: smartmontools.spec,v 1.69 2002/11/17 05:57:32 ballen4705 Exp $
 
 # Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 # Home page: http://smartmontools.sourceforge.net/
@@ -252,6 +252,19 @@ fi
 
 %define date	%(echo `LC_ALL="C" date +"%a %b %d %Y"`)
 %changelog
+* Sun Nov 17 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
+- Fixed bug in smartd where testunitready logic inverted
+  prevented functioning on scsi devices.
+- Added testunitnotready to smartctl for symmetry with smartd.
+- Brabec: added Czech descriptions to .spec file
+- Brabec: corrected comment in smartd.conf example
+- Changed way that entries in the ATA error log are printed,
+  to make it clearer which is the most recent error and
+  which is the oldest one.
+- Changed Temperature_Centigrade to Temperature_Celsius.
+  The term "Centigrade" ceased to exist in 1948.  (c.f
+  http://www.bartleby.com/64/C004/016.html).
+
 * Wed Nov 13 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 - smartd SCSI devices: can now send warning email message on failure
 - Added a new smartd configuration file Directive: -M ADDRESS.
